[tool.poetry]
name = "tuezoom"
version = "0.1.0"
description = ""
authors = ["baaaqt <bakyt.worker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.1"}
sqlalchemy = "^2.0.19"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
